[package]
name = "tabby-cat"
version = "1.4.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
webbrowser = "0.8.0"

[target.'cfg(windows)'.dependencies]
windows = "0.43.0"

# Uncomment this to shirnk the binary size
# [profile.release]
# panic = "abort"
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1