[package]
name = "tabby-cat"
version = "1.4.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
webbrowser = "0.8.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.44", features = ["Win32_Foundation", "Win32_System_Registry"] }

# Uncomment this to shirnk the binary size
# [profile.release]
# panic = "abort"
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1